# RobotArm1

./: .gitignore  CMakeLists.txt  LICENSE  README.md
exec/: communication.cpp  dataCollect.cpp  detectLetter.cpp  mainTask.cpp  manipulate.cpp  markerPos.cpp  smallTests.cpp
include/: ArucoMarker.hpp  BpNetwork.hpp  UsbCAN.hpp  Wifi.hpp  control.hpp  parameters.hpp  rsDev.h
src/: ArucoMarker.cpp  BpNetwork.cpp  LettersClassify.cpp  UsbCAN.cpp  Wifi.cpp  control.cpp  letter_classify.py  main.cpp  number_network.py  position.cpp  rsDev.cpp  tf_network.py  twoJoints.cpp
